--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
 }
