--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "phaser": "^3.87.0"
   }
 }
