--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
+    "gh-pages": "^6.3.0",
     "vite": "^6.0.5"
   },
   "dependencies": {
